objects/PermissionSet__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PermissionSet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_SetID__c</fullName>
        <label>User Permission SetID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <formula>HYPERLINK(&apos;https://advisory--scloud.cs25.my.salesforce.com/&apos;&amp;Permission_SetID__c,  Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <label>User Permission Set</label>
    <nameField>
        <displayFormat>PERM-{00}</displayFormat>
        <label>Permission set</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Set</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>